@@ -2,6 +2,9 @@
 
 * Fixed valid() operation to properly use valid_min/valid_max attribute values.
 
+* Fixed issue in adding *_count variable in append/merge when count variable
+  had more than one dimension.
+
 * Update to GEOMS MWR and S5P L2 product ingestions.
 
 1.7 2019-06-06
